--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "mean-template",
+  "name": "collectivist-app",
   "version": "0.0.0",
-  "homepage": "https://github.com/nss-cohort-2014-06-07/mean-template",
+  "homepage": "https://github.com/dsroden/collectivist-app",
   "authors": [
-    "Chyld Medford <chyld.medford@gmail.com>"
+    "DSRoden <daniel.s.roden@gmail.com>"
   ],
-  "description": "The MEAN Template",
+  "description": "a better way of doing surveys",
   "license": "MIT",
   "dependencies": {
     "angular": "1.3.0-rc.2",
