--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "mean-template",
+  "name": "collectivist-app",
   "version": "0.0.0",
-  "description": "The MEAN Template",
+  "description": "a better way of doing surveys",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nss-cohort-2014-06-07/mean-template"
+    "url": "https://github.com/dsroden/collectivist-app"
   },
-  "author": "Chyld Medford <chyld.medford@gmail.com>",
+  "author": "DSRoden <daniel.s.roden@gmail.com>",
+  "contributors": "Nathan Vasquez, Mikey Badr, Juan Rodriguez, Mark Supalla, Matt Keef",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nss-cohort-2014-06-07/mean-template/issues"
+    "url": "https://github.com/dsroden/collectivist-app/issues"
   },
-  "homepage": "https://github.com/nss-cohort-2014-06-07/mean-template",
+  "homepage": "https://github.com/dsroden/collectivist-app",
   "dependencies": {
     "async": "^0.9.0",
     "bcrypt": "^0.8.0",
@@ -25,7 +26,8 @@
     "morgan": "^1.3.1",
     "multiparty": "^3.3.2",
     "request": "^2.44.0",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "underscore-contrib": "^0.3.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
