--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "underscore-contrib": "^0.3.0"
   },
   "devDependencies": {
+    "chai": "^1.9.1",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.6.0",
