--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "fontawesome": "~4.2.0",
     "underscore": "~1.7.0",
     "jquery": "~2.1.1",
-    "toastr": "~2.0.3"
+    "toastr": "~2.0.3",
+    "venturocket-angular-slider": "~0.3.2",
+    "ng-slider": "~0.1.4"
   }
 }
