--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^1.4.12",
     "morgan": "^1.3.1",
     "multiparty": "^3.3.2",
+    "ng-slider": "^0.1.4",
     "request": "^2.44.0",
     "underscore": "^1.7.0",
     "underscore-contrib": "^0.3.0"
